Feature parity document

--- a/.gitignore
+++ b/.gitignore
@@ -30,4 +30,10 @@ coverage.out
 *.tmp
 
 # Other repos
-/docs/xai-sdk-python
+# /docs/xai-sdk-python
+
+# Local binaries
+/basic
+/function_calling
+/streaming
+/structured_outputs
