fix: update GoReleaser config to fix deprecation warnings
Fixed deprecated fields in .goreleaser.yml:
- Changed 'snapshot.name_template' to 'snapshot.version_template'
- Changed 'archives.format' to 'archives.format_overrides' (tar.gz default, zip for Windows)

This resolves the deprecation warnings from GoReleaser v2.12+.

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -17,7 +17,9 @@ builds:
 
 # Archives
 archives:
-  - format: tar.gz
+  - format_overrides:
+      - goos: windows
+        format: zip
     name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
     files:
       - README.md
@@ -29,7 +31,7 @@ checksum:
 
 # Snapshot
 snapshot:
-  name_template: "{{ .Tag }}-next"
+  version_template: "{{ .Tag }}-next"
 
 # Changelog
 changelog:
