fix: configure GoReleaser for library release (no binaries)
This is a Go library SDK, not a binary application.
Updated .goreleaser.yml to skip builds and only create GitHub releases
with changelog and source code archives.

Removed:
- Binary builds configuration
- Archive configuration (not needed for library)

This allows GoReleaser to create proper library releases.

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,29 +1,8 @@
 # .goreleaser.yml
-# Build customization
+# This is a Go library, not a binary application
+# We skip builds and only create source archives
 builds:
-  - main: .
-    binary: xai-sdk-go
-    ldflags:
-      - -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{.Date}}
-    env:
-      - CGO_ENABLED=0
-    goos:
-      - linux
-      - darwin
-      - windows
-    goarch:
-      - amd64
-      - arm64
-
-# Archives
-archives:
-  - format_overrides:
-      - goos: windows
-        format: zip
-    name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
-    files:
-      - README.md
-      - LICENSE
+  - skip: true
 
 # Checksum
 checksum:
