chore: add example binaries to .gitignore
Prevent example binaries from being committed in the future:
- advanced_parameters
- complete_parameters
- advanced_features

--- a/.gitignore
+++ b/.gitignore
@@ -32,10 +32,13 @@ coverage.out
 # Other repos
 /docs/xai-sdk-python
 
-# Local binaries
+# Local binaries (example executables)
 /basic
 /function_calling
 /streaming
 /structured_outputs
 /list
 /main
+/advanced_parameters
+/complete_parameters
+/advanced_features
